src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Acquisition_Campaign__c</fullName>
        <description>Used as a vertical tracking for Acquisition sales</description>
        <label>zAcquisition Campaign</label>
        <picklist>
            <picklistValues>
                <fullName>Interspire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProStores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YahooStores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go Daddy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MagentoGo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1ShoppingCart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar - Visitors into Buyers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar 2.5.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miva Merchant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinnacle Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zen Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OS Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YahooStores2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon Webstore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3D Cart</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Count__c</fullName>
        <description>For reporting purposes only; not on layouts</description>
        <formula>1</formula>
        <label>Activity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Object__c</fullName>
        <description>Identifies which object type the activity is related to</description>
        <formula>IF(LEFT(WhatId,3) = &quot;001&quot;,&quot;Account&quot;,
IF(LEFT(WhatId,3) = &quot;006&quot;,&quot;Opportunity&quot;,
IF(LEFT(WhatId,3) = &quot;500&quot;,&quot;Case&quot;,
IF(LEFT(WhoId,3)= &quot;00Q&quot;,&quot;Lead&quot;,
IF(LEFT(WhoId,3)=&quot;003&quot;,&quot;Contact&quot;,
NULL)))))</formula>
        <label>REPORT: Activity Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Days_in_Month__c</fullName>
        <description>reporting/dashboards only</description>
        <formula>CASE(MOD( First_of_Month__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( Last_of_Month__c - First_of_Month__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Last_of_Month__c - First_of_Month__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Last_of_Month__c - First_of_Month__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Last_of_Month__c - First_of_Month__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Last_of_Month__c - First_of_Month__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Last_of_Month__c - First_of_Month__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Last_of_Month__c - First_of_Month__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Last_of_Month__c - First_of_Month__c )/7)*5)</formula>
        <label>REPORT: Business Days in Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Count_Number__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Count Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Count__c</fullName>
        <formula>IF( Task_Type__c = &quot;Call&quot;,1,NULL)</formula>
        <label>Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Disposition__c</fullName>
        <description>I3 Call Disposition</description>
        <inlineHelpText>I3 Call Disposition</inlineHelpText>
        <label>Call Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Duration_Minutes__c</fullName>
        <formula>CallDurationInSeconds / 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Outcome__c</fullName>
        <description>SSquad field - may be able to be removed but check with Steven Bennett</description>
        <label>Call Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Follow Up to Twitter Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered for Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultation Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultation Held</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultation Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultation Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact/No Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Result_Manual__c</fullName>
        <description>Include the Call Result here if you are logging the call outside of Inside Sales</description>
        <inlineHelpText>Include the Call Result here if you are logging the call outside of Inside Sales</inlineHelpText>
        <label>Call Result (Manual)</label>
        <picklist>
            <picklistValues>
                <fullName>Busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Live Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correct Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set Callback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Topics__c</fullName>
        <description>Success Squad field</description>
        <label>Call Topics</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Consultation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Web Pages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Zones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxes</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Comments_short__c</fullName>
        <description>populated by WFR to capture comments left in the phone system standard Comment field - needed because you can&apos;t pull the standard field in a page layout related list</description>
        <label>Comments (short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correct_Contact_Call__c</fullName>
        <formula>IF(CallDisposition = &quot;Correct Contact&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correct Contact Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Is_Created_By_Groove__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether this activity was automatically created by Groove. This can be used as signal for workflows to trigger (field updates, email alerts, etc.).</inlineHelpText>
        <label>Is Created By Groove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__LastModifiedDate__c</fullName>
        <inlineHelpText>is the most recent date/time on which Groove updated the event record or the date/time a logged email was sent by the sender.</inlineHelpText>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Mirror_in_Owner_s_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>controls whether or not this event will be mirrored in the corporate calendar of the user who is the owner of this event. This field is part of the Groove calendar integration.</inlineHelpText>
        <label>Mirror in Owner&apos;s Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Replied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates whether Groove detected at least one reply to this Email (Task). This only works if the respective email was logged (e.g. via Groove Email Sync or Groove for Gmail).</description>
        <label>Replied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Times_Opened__c</fullName>
        <inlineHelpText>if a task reflects a tracked email, this field indicates how many times the email was opened by any of the recipients.</inlineHelpText>
        <label>Times Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__vCal_IID__c</fullName>
        <inlineHelpText>is the instance ID of a recurring calendar event or the id of a referenced email. This field is part of Groove integration.</inlineHelpText>
        <label>IID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__vCal_UID__c</fullName>
        <inlineHelpText>is the unique ID of an activity such as the calendar event UID or the email message ID. This field is part of the Groove calendar integration.</inlineHelpText>
        <label>UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Month__c</fullName>
        <description>for reporting and dashboard formulas; not on any layouts</description>
        <formula>DAY(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REPORT: Day of the Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo_Held__c</fullName>
        <description>Date that a demo was help by a sales rep</description>
        <inlineHelpText>The date that a demo was held by a sales rep</inlineHelpText>
        <label>Demo Held Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demo_Set_Date__c</fullName>
        <description>Date that the Sales rep scheduled a demo for the prospect</description>
        <inlineHelpText>When did you set the date for your demo?</inlineHelpText>
        <label>Demo Set Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dialer_Campaign__c</fullName>
        <description>I3 Dialer Campaign name</description>
        <inlineHelpText>I3 Dialer Campaign name</inlineHelpText>
        <label>Dialer Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Count__c</fullName>
        <formula>IF( Task_Type__c = &quot;Email&quot;,1,NULL)</formula>
        <label>Email Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <inlineHelpText>A rough estimate of effort. Travel time not included.</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_of_Month_Formula__c</fullName>
        <description>for reporting/dashboards</description>
        <formula>Date(Year(  TODAY()  ),Month( TODAY() ),1)</formula>
        <label>REPORT: First of Month Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_of_Month__c</fullName>
        <description>reports only</description>
        <label>REPORT: First of Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inbound_Test__c</fullName>
        <label>Inbound Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Active Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Active Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Pretrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSQ/Migrations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Solicitor, HR, Wrong Number)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Last_Campaign__c</fullName>
        <description>Used for reporting on campaign dialed on in I3</description>
        <inlineHelpText>Used for reporting on campaign dialed on in I3</inlineHelpText>
        <label>Last Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_of_Month_Formula__c</fullName>
        <description>reporting/dashboard only</description>
        <formula>Date(Year( TODAY() ),Month( TODAY() ), IF(Month( TODAY() )=12, 31,DAY(DATE(YEAR(  TODAY()),MONTH( TODAY() )+1,1) - 1)))</formula>
        <label>REPORT: Last of Month Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_of_Month__c</fullName>
        <description>reports only</description>
        <label>REPORT: Last of Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_ID_formula__c</fullName>
        <description>Formula field that stores activity Manager ID for use in process builder</description>
        <formula>Owner:User.ManagerId</formula>
        <inlineHelpText>Formula field that stores activity Manager ID for use in process builder</inlineHelpText>
        <label>Manager ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Count__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Populated via workflow to designate if the Type is meeting rather than just a call.</inlineHelpText>
        <label>Meeting Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Menu_Option__c</fullName>
        <description>I3 Phone Menu option selected</description>
        <inlineHelpText>I3 Phone Menu option selected</inlineHelpText>
        <label>Menu Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owning_Team__c</fullName>
        <defaultValue>$User.Department</defaultValue>
        <label>Owning Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pin_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was the Pin verified on this call? Sent from I3</description>
        <inlineHelpText>Was the Pin verified on this call? Sent from I3</inlineHelpText>
        <label>Pin Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Link__c</fullName>
        <description>Link to Enterprise Account Manager project page</description>
        <inlineHelpText>Provide a link to your project smartsheet</inlineHelpText>
        <label>Project Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>REPORT_Business_Days_to_Date__c</fullName>
        <description>Calculates the number of working days in a month based on the day of the month you are at</description>
        <formula>CASE(MOD(  First_of_Month__c  - DATE(1985,6,24),7), 
  0 , CASE( MOD(  REPORT_Today_s_Date__c  - First_of_Month__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( REPORT_Today_s_Date__c  - First_of_Month__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( REPORT_Today_s_Date__c  - First_of_Month__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( REPORT_Today_s_Date__c  - First_of_Month__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( REPORT_Today_s_Date__c  - First_of_Month__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( REPORT_Today_s_Date__c  - First_of_Month__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( REPORT_Today_s_Date__c  - First_of_Month__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( REPORT_Today_s_Date__c  - First_of_Month__c)/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REPORT: Business Days to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REPORT_Cancellation__c</fullName>
        <description>success squad reporting</description>
        <formula>IF(ISPICKVAL( Call_Outcome__c ,&quot;Appointment Cancelled&quot;),1,0)</formula>
        <label>REPORT: Cancellation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REPORT_Consultation__c</fullName>
        <description>success squad reporting</description>
        <formula>IF(ISPICKVAL( Call_Outcome__c, &quot;Consultation : Other&quot;) || ISPICKVAL( Call_Outcome__c, &quot;Consultation : Store Launched&quot;),1,0)</formula>
        <label>REPORT: Consultation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REPORT_Today_s_Date__c</fullName>
        <formula>TODAY()</formula>
        <label>REPORT: Today&apos;s Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recording_Link__c</fullName>
        <description>I3 Call Recording Link</description>
        <inlineHelpText>I3 Call Recording Link - I3 can&apos;t send so remove</inlineHelpText>
        <label>zRecording Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SalesVue__Plan_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Task</label>
        <referenceTo>SalesVue__Plan_Task__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Success_Squad_Call_Disposition__c</fullName>
        <description>Call disposition for PS team</description>
        <inlineHelpText>Call disposition for PS team</inlineHelpText>
        <label>PS Call Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Intro Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Attempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to reach client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultation Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working with 3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client has no products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager Callback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <description>used to capture the standard Type field value so we can use it in reports.  The standard field isn&apos;t available due to weird SF constraints</description>
        <label>Task Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total time spent working task (in hours). Specific to Enterprise Account Manager task layout</description>
        <inlineHelpText>How much time have you spent on this task? (in hours - round to the nearest quarter hour)</inlineHelpText>
        <label>Time Spent (hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Test__c</fullName>
        <formula>CASE( VALUE(MID(TEXT( qbdialer__Call_Date_Time__c ),12,2)) , 
0, 19,
1, 20,
2, 21,
3, 22,
4, 23,
5, 0,
6, 1,
7, 2,
8, 3,
9,  4,
10,  5,
11,  6,
12,  7,
13,  8,
14,  9,
15,  10,
16,  11,
17,  12,
18,  13,
19,  14,
20,  15,
21,  16,
22,  17,
23,  18,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Actions_Taken__c</fullName>
        <description>Actions taken by the recipient of an email (Sign Up, Enter Credit Card, Hits a button, Visits a particular page, etc).</description>
        <label>Tout Actions Taken</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Clicked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the recipient of the email has clicked on links inside the email.</description>
        <label>Tout Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Details__c</fullName>
        <description>A link to more details around the Touted email.</description>
        <label>Tout Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Events_Tracked__c</fullName>
        <description># of Tout Engagement Events tracked around this email.</description>
        <label>Tout Events Tracked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Last_Event_At__c</fullName>
        <description>The last time someone viewed, clicked or engaged in any other way with this email.</description>
        <label>Tout Last Event At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Presentation_Viewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a presentation included in this email was viewed.</description>
        <label>Tout Presentation Viewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Replied_At__c</fullName>
        <description>THe timestamp of when someone last replied to this email.</description>
        <label>Tout Replied At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Replied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Tout detected a response to this email.</description>
        <label>Tout Replied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Sent_By__c</fullName>
        <label>Tout Sent By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Template_Details__c</fullName>
        <description>A link to details around the Tout template.</description>
        <label>Tout Template Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Template__c</fullName>
        <description>The name of the Tout template used in this email.</description>
        <label>Tout Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Viewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the recipient of the email viewed it.</description>
        <label>Tout Viewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WFR_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WFR Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X48_hour_notice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>48 hour notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isdc_day_of_week__c</fullName>
        <label>Day of the Week</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isdc_dialed_phone_number__c</fullName>
        <description>inside sales app field</description>
        <label>Phone Dialed</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>isdc_dialer_call_type__c</fullName>
        <description>inside sales app field</description>
        <inlineHelpText>How was this call initiated within the InsideSales application?</inlineHelpText>
        <label>Dialer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Click-to-Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seek List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domino List</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isdc_dialer_list_name__c</fullName>
        <description>inside sales app field</description>
        <inlineHelpText>Seek List used for this call</inlineHelpText>
        <label>List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isdc_dialer_query_name__c</fullName>
        <description>inside sales app field</description>
        <inlineHelpText>Query used to initiate this call</inlineHelpText>
        <label>Query Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isdc_inbound_call_answered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>inside sales app field</description>
        <inlineHelpText>inside sales app field</inlineHelpText>
        <label>Call Answered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isdc_inbound_call_failover__c</fullName>
        <defaultValue>false</defaultValue>
        <description>inside sales app field</description>
        <label>Call Failover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isdc_inbound_callerid__c</fullName>
        <description>inside sales app field</description>
        <label>Inbound Caller-ID</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>isdc_inbound_failover_number__c</fullName>
        <description>inside sales app field</description>
        <label>Failover Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>isdc_inbound_number_dialed__c</fullName>
        <description>inside sales app field</description>
        <label>Inbound Number Dialed</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>isdc_inbound_routed_to_last_caller__c</fullName>
        <defaultValue>false</defaultValue>
        <description>inside sales app field</description>
        <label>Route to Last Caller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isdc_inbound_routed_to_owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>inside sales app field</description>
        <label>Route to Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isdc_inbound_wait_time__c</fullName>
        <description>inside sales app field</description>
        <label>Wait Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isdc_local_presence_call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>inside sales app field</description>
        <label>LocalPresence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__CallRecordingURL__c</fullName>
        <description>Link to the call recording</description>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Date_Time__c</fullName>
        <label>Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Dial_Number__c</fullName>
        <description>Total number of dials on the record being called</description>
        <label>Call Dial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>